k8s/04-django-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-api-deployment
  namespace: devops-django
spec:
  replicas: 2
  selector:
    matchLabels:
      app: django-api
  template:
    metadata:
      labels:
        app: django-api
    spec:
      containers:
        - name: django-api
          image: devops-django-api:latest
          imagePullPolicy: IfNotPresent
          command: ["gunicorn", "core.wsgi:application", "--bind", "0.0.0.0:8000", "--workers", "3"]
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          readinessProbe:
            httpGet:
              path: /api/v1/health/
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/v1/health/
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: django-api-service
  namespace: devops-django
spec:
  type: ClusterIP
  selector:
    app: django-api
  ports:
    - port: 8000
      targetPort: 8000
